# llama-summarizer

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/: hf-deploy.yml
.github/workflows/: hf-deploy.yml
app/: quantize.py  quantize.sh  run_quantized.py  test_model.py
llama_summarizer/: __init__.py  chat.py  random_article.py
models/: Q4_K_M.gguf
static/: index.html  src.js  style.css
