[tool.poetry]
name = "llama-summarizer"
version = "0.1.0"
description = "Built with llama"
authors = ["aygalic <aygalic@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
llama-stack = "^0.0.38"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
